<resources>
    <string name="app_name">ModifiedBallDroid</string>
    <string name="welcomeTitle">Modified BallDroid</string>
    <string name="infoText">1st device: Start game \n 2nd device: Record</string>
    <string name="infoText2">Start recording, when both devices are ready! \n Louder sound: Ball moves right</string>
    <string name="start_game">Start Game</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="high_scores">High Scores</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_hard">Hard</string>
    <string name="about">About this game</string>
    <string name="pause_text">Game is paused, press back to unpause</string>
    <string name="title_activity_test_tabbed">TestTabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="no_highscores">No highscores yet</string>
    <string name="about_text">This game has been created by Maxime Lovino as part of an Introduction to Android development class at Hepia. Most of the knowledge used for this project has been learned during the completion of this game.</string>
</resources>
